--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm install && cd portfolio && npm install && npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -26,5 +27,4 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "heroku-postbuild": "npm install && cd portfolio && npm install && npm run build"
 }
