--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "npm install && cd portfolio && npm install && npm run build"
+    "heroku-postbuild": " npm install && npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
