--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react-pose": "^3.3.7",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.5"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
